--- a/Views/Repository/Index.cshtml
+++ b/Views/Repository/Index.cshtml
@@ -256,5 +256,10 @@
     <script src="~/js/pages/utils/accounts.utils.js" asp-append-version="true"></script>
     <script src="~/js/pages/contarepo.admin.js" asp-append-version="true"></script>
     <script src="~/js/pages/contarepo.admin.detrepo.js" asp-append-version="true"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+    <script>
+        $('#selectAñoModal .btn-secondary').on('click', function () {
+            $('#selectAñoModal').modal('hide');
+        });
+
+    </script>
 }
