--- a/Views/CentroCosto/Index.cshtml
+++ b/Views/CentroCosto/Index.cshtml
@@ -89,6 +89,10 @@
     <script src="~/js/pages/utils/base.grid.js" asp-append-version="true"></script>
     <script src="~/js/pages/utils/accounts.utils.js" asp-append-version="true"></script>
     <script src="~/js/pages/centrocosto.admin.js" asp-append-version="true"></script>
-    <script src="~/js/pages/utils/accounts.utils.js" asp-append-version="true"></script>
     <script src="~/js/pages/centrocosto.admin.accounts.js" asp-append-version="true"></script>
+
+
+    <script src="~/js/pages/contarepo.admin.detrepo.js" asp-append-version="true"></script>
+
+
 }
