--- a/Views/DmgDoctos/DoctosForm.cshtml
+++ b/Views/DmgDoctos/DoctosForm.cshtml
@@ -4,15 +4,15 @@
             <input type="hidden" class="form-control" placeholder="" id="isUpdating" name="isUpdating"/>
             <input type="hidden" class="form-control" placeholder="" id="COD_CIA" name="COD_CIA"/>
             
-            <div class="form-group col-md-6">
+            <div class="form-group col-md-12">
                 <label>C&oacute;digo de documento</label>
                 <input type="text" class="form-control" placeholder="" id="TIPO_DOCTO" name="TIPO_DOCTO"/>
             </div>
 
-            <div class="form-group col-md-6">
+           @*  <div class="form-group col-md-6">
                 <label>Contador de p&oacute;liza</label>
                 <input type="text" class="form-control" placeholder="" id="CONTADOR_POLIZA" name="CONTADOR_POLIZA">
-            </div>
+            </div> *@
         </div>
         
         <div class="row">
@@ -23,7 +23,7 @@
         </div>
         
         <div class="row">
-            <div class="form-group col-md-6">
+            @* <div class="form-group col-md-6">
                 <label>Proceso</label>
                 <select class="form-control" id="PROCESO" name="PROCESO">
                     <option value="">Seleccione un valor</option>
@@ -39,7 +39,7 @@
                     <option value="M">Manual</option>
                     <option value="A">Autom&aacute;tico</option>
                 </select>
-            </div>
+            </div> *@
         </div>
 
         <div class="row">
