--- a/Views/DmgDoctos/Index.cshtml
+++ b/Views/DmgDoctos/Index.cshtml
@@ -37,10 +37,10 @@
                 <th style="width: 5%;">#</th>
                 <th>Compa&ntilde;&iacute;a</th>
                 <th>C&oacute;digo</th>
-                <th>Contador p&oacute;liza</th>
-                <th>Descripci&oacute;n de la p&oacute;liza</th>
-                <th>Proceso</th>
-                <th>Grabaci&oacute;n de p&oacute;liza</th>
+@*                 <th>Contador p&oacute;liza</th>
+ *@                <th>Descripci&oacute;n de la p&oacute;liza</th>
+                @* <th>Proceso</th> *@
+@*                 <th>Grabaci&oacute;n de p&oacute;liza</th> *@
                 <th style="width: 10%;">Acciones</th>
             </tr>
             </thead>
